--- a/src/app.html
+++ b/src/app.html
@@ -11,7 +11,10 @@
       rel="stylesheet"
       href="https://1.www.s81c.com/common/carbon/plex/sans-condensed.css"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0"
+    />
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
